--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
    <h1> This is awesome</h1> 
+   <p>Gghjgjh</p>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia iusto animi aspernatur deserunt, quidem delectus hic, autem consequatur, minus facere inventore esse magnam doloremque sequi doloribus saepe maxime! Officia, repudiandae.</p>
 </body>
 </html>
